<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:menu="@menu/member_menu">

    <RelativeLayout
        style="@style/MatchParent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:id="@+id/frag_member_toolbar"
            app:title="Details"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:titleTextColor="@color/colorAccent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_below="@id/frag_member_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/topLinearPanel"
                android:padding="@dimen/padding_mini"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailsName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="@string/name"
                    android:gravity="center"
                    android:textAllCaps="true"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"/>

                <TextView
                    android:id="@+id/tvDetailsAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:padding="@dimen/padding_mini"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/members"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/membersRecyclerView"
                    android:isScrollContainer="false"
                    android:padding="@dimen/padding_small"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>